2006-01-15 Christian Persch <chpe@cvs.gnome.org>
 
	* m4/gecko.m4:

	Updated from Epiphany: correct gecko version check
	if mozilla-config.h includes other files (multi-arch).

2006-01-15  Don Scorgie  <dscorgie@cvs.gnome.org>

	* data/ui/yelp.glade: 
	* src/yelp-window.c: 
	* src/gtkentryaction.c: 
	Patch from Dennis Cranston for several HIG issues
	Add mnemonics to find and search labels Fixes #326134
	
	* src/yelp-utils.c: 
	Add /usr/local/info and /usr/local/share/info to default infopaths

	* src/yelp-info-parser.c: 
	* src/yelp-info-pager.c: 
	* src/yelp-search-pager.c: 
	Fix info search results (basic) to go to correct section of info doc
	Stop info pages repeating twice
	Fix crash if info section doesn't exist
	
2006-01-14  Brent Smith  <gnome@nextreality.net>

	* configure.in:
	* src/yelp-man-parser.c:
	* src/yelp-toc-pager.c: (toc_process_pending):
	fixed some more compiler warnings, and added a summary of
	configuration parameters at the end of configure.in;
	Hopefully this will help us track down problems with search
	if people are reporting bugs, but don't know whether they
	are using Beagle or the basic search support.

2006-01-13  Brent Smith  <gnome@nextreality.net>

	* src/yelp-db-print-pager.c: (db_print_pager_parse):
	* src/yelp-man-parser.c: (macro_ignore_handler),
	(parser_handle_linetag), (parser_append_given_text_handle_escapes):
	fix some silly compiler errors with debug enabled

2006-01-12  Don Scorgie  <dscorgie@cvs.gnome.org>

	* Makefile.am: 
	* MAINTAINERS: 
	Add MAINTAINERS file
	
	* configure.in: 
	Enable man and info support by default :)

2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-window.c: 
	Make find menu items insensitive when not available
	
2006-01-09  Don Scorgie  <dscorgie@cvs.gnome.org>

	* src/yelp-base.c: 
	Actually commit cleanup in file

2006-01-08  Brent Smith  <gnome@nextreality.net>

	* src/yelp-man-parser.c: (yelp_man_parser_parse_file),