@@ -1,3 +1,12 @@
+2006-01-16  Don Scorgie  <dscorgie@cvs.gnome.org>
+
+        * configure.in:
+        * src/yelp-base.h:
+        * idl/GNOME_Yelp.idl:
+        * src/yelp-main.c:
+        * src/yelp-base.c:
+        Add startup notification stuff, fixes #310237
+
 2006-01-15 Christian Persch <chpe@cvs.gnome.org>
  
 	* m4/gecko.m4:
